package Utils;

public class Cell {
    private int x;
    private int y;
    private String cellValue;

    public Cell(int x, int y) {
        this.x = x;
        this.y = y;
        this.cellValue = null;
    }

    public Cell(int x, int y, String cellValue) {
        this.x = x;
        this.y = y;
        this.cellValue = cellValue;
    }

    public int getX() {
        return x;
    }

    public void setX(int x) {
        this.x = x;
    }

    public int getY() {
        return y;
    }

    public void setY(int y) {
        this.y = y;
    }

    public String getCellValue() {
        return cellValue;
    }

    public void setCellValue(String cellValue) {
        this.cellValue = cellValue;
    }

    @Override
    public String toString() {
        return cellValue;
    }
}

